# harm_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.MD  ARCHITECTURE.md  ARCHITECTURE_FINAL.md  CHUNKING.MD  Dockerfile  EVALUATION.MD  Makefile  PDF_PROCESSING.MD  PDF_TEXT_EXTRACTION.MD  PROJECT.MD  README.md  REFACTOR_PLAN.MD  RETRIEVAL_AND_QA.MD  SCALING.md  TRANSCRIPT_TEXT_EXTRACTION.MD  alembic.ini  alg.py  docker-compose.yml  final_summary.txt  kill-port.sh  mypy.ini  out.json  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 20250912_add_utterance.py  20250913_add_conversation_tables.py  20250913_add_cost_event.py  65e9079d129e_.py  79acfe87e810_.py  a6c4dbc142b3_.py  aff40758a967_merge_heads.py
api/: main.py
api/di/: container.py
api/helpers/: cbv.py
api/shared/: base.py  db.py  dtos.py  exceptions.py  response.py  utils.py
core/: __init__.py  settings.py
deployment/helm/: Chart.yaml  values.yaml
deployment/terraform/: main.tf  variables.tf
deprecated/: chunk.py.deprecated  embedding.py.deprecated  embeddings.py.deprecated  transcripts.py.deprecated  utterance.py.deprecated
di/: container.py
etl/: __init__.py  chunk.py  embed.py  index.py  ingest.py  parse_pdf.py  pipeline.py
infra/: db_utils.py  minio_utils.py  resources.py
infra/costs/: pricing.py  recorder.py
initdb/: init.sql
streamlit_ui/: chat_ui.py
workers/: celery_app.py  container.py  document_processor.py  embeddings.py  indexing.py  initialization.py  job_worker.py  langchain_processor.py  langchain_query_service.py  tasks.py  transcripts.py
(+54 files in other folders)
