[project]
name = "experiment-rag-etl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "psycopg[binary]>=3.1.19",
  "pgvector>=0.2.5",
  "redis>=5.0.4",
  "celery>=5.3.6",
  "flower>=2.0.1",
  "httpx>=0.27.0",
  "tenacity>=8.3.0",
  "minio>=7.2.5",
  "prometheus-client>=0.20.0",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.1",
  "dependency-injector>=4.41.0",
  "python-multipart>=0.0.20",
  "spacy>=3.8.7",
  "openai>=1.40.0",
  "neo4j>=5.22.0",
  "langchain-core>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-postgres>=0.0.12,<0.1.0",
  "langchain-text-splitters>=0.2.0",
  "pdfplumber>=0.11.7",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
pdf = [
  "pymupdf>=1.24.0",
  "pdfminer.six>=20231228",
  "unstructured>=0.14.7",
  "camelot-py[cv]>=0.11.0",
  "tabula-py>=2.9.0",
  "pytesseract>=0.3.13",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "workers"]
